20111023
	Various minor fixes from NetBSDfr hackathon
	Moved break_depends() at the end of impact.c to avoid inconsistencies
	Check for real filesystem size to be occuppied by upgrade
	Check for user permissions before update_db
	update_db() returns a status so we can warn simple users

20111016
	Don't download packages when repository is a file:// scheme
	Reduce verbosity when marking non-autoremovable packages

20111010
	Keep going if unmet requirements are encountered and warn about
	it before proceeding

20111002
	Always move pkg_install on top of the "to-upgrade" list

20111001
	pkgin now depends on pkgsrc's pkg_install

20110910
	Many changes occured, let's make it 0.5.1
	Log timestamp
	Better handling of pkg_install error logs

20110907
	rec_pkglist() now takes a va_list

20110906
	Added "requires" and "provides" to have a closer look on packages	
	requirements
20110901
	pkg_install's pkgdb not needed anymore for a fresh start (bsdx's idea)

20110831
	Globs can now be passed as an argument for package installation, i.e.
	# pkgin in 'mysql-server<5.1'

20110830
	Export / import a list of packages as requested by wiz@
	Operations tracing flag (-t)

20110828
	Database silent migration
	More flexible check_yesno()
	Made pkgin in / rm yes by default

20110821
	pkgin 0.5.0 in progress
	One struct to rule them all (Pkglist)
	Got rid of many useless lists (speed x10, literally)
	Introduced FULLPKGNAME as db member, speed ups searches
	unique_pkg(): no more "many versions of foo", pickup newer

20110810
	Progress now shown with progressmeter from OpenSSH

20110809
	Release 0.4.2.2
	Cleaned up download.c
	SQLite upgraded to 3.7.7.1

20110802
	Release 0.4.2.1
	Fixed the "too many connexions" problem with libfetch and FTP

20110306
	Release 0.4.2
	Moving to SF.net
	Check for mark_as_automatic_installed() return code

20110301
	pkgin can now upgrade pkg_install with user's approval

20110228
	url_stat's size is declared as off_t, will be > SSIZE_MAX on