@@ -4,6 +4,7 @@
 	Check for real filesystem size to be occuppied by upgrade
 	Check for user permissions before update_db
 	update_db() returns a status so we can warn simple users
+	introduced have_enough_rights(), fixed pkg_keep() perms
 
 20111016
 	Don't download packages when repository is a file:// scheme
